--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Responsive Images Examples</title>
     <!-- TO DO: Add your name to the meta author tag -->
-    <meta name="author" content="">
+    <meta name="author" content="Kali Campbell">
     <meta name="description" content="Code examples showing how to add responsive images to a website for art direction or for resolution switching">
 
     <link rel="stylesheet" href="styles.css">
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>Copyright &copy; <span>2024</span> - Jessica Barnett</p>
+        <p>Copyright &copy; <span>2024</span> - Kali Campbell</p>
     </footer>
 </body>
 
