--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- TO DO: Add the picturefill code here -->
     
+    
 </head>
 
 <body id="top">
@@ -25,6 +26,13 @@
 
 
             <!-- TO DO: Add the responsive images for art direction here -->
+             <picture>
+                <source media="(max-width: 600px)" width="485" height="273" srcset="images/art-direction-sm.png">
+                <source media="(max-width: 999px)" width="768" height="410" srcset="images/art-direction-med.png">
+                <source media="(min-width: 1000px)" width="1440" height="810" srcset="images/art-direction-lg.jpg">
+                <img src="image/art-direction-lg.jpg" width="1440" height="810" alt="">
+             </picture>
+
 
         </section>
 
@@ -32,6 +40,16 @@
             <h2>Responsive Images for Resolution Switching</h2>
 
             <!-- TO DO: Add the responsive images for resolution switching here -->
+             <img srcset="images/resolution-switching-sm.png 300w,
+                           images/resolution-switching-med.png 500w,
+                            images/resolution-switching-lg.jpg 800w"
+                    sizes="(max-width: 450px) 300px,
+                            (max-width: 699px) 500px,
+                            (min-width: 700px) 800px"
+                    src="images/resolution-switching-sm.png" 
+                    alt="A dark gray backpack with brown leather accents and a top handle"
+                    width="300" 
+                    height="300">
 
         </section>
     </main>
