--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- TO DO: Add the picturefill code here -->
-    
+    <script>
+        // Picture element HTML5 shiv
+        document.createElement( "picture" );
+      </script>
+      <script src="picturefill.min.js" async></script>
     
 </head>
 
